MDEV-8836 - Server crashed in my_copy_8bit on querying I_S.PROCESSLIST

Fixed race condition in code filling INFORMATION_SCHEMA.PROCESSLIST.INFO_BINARY.
When loading query string/length of another connection one must have
LOCK_thd_data locked.